# SmartLife

./: README.en.md  README.md  build-profile.json5  oh-package-lock.json5  oh-package.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
AppScope/resources/base/media/: layered_image.json
docs/: 小组信息.txt
docs/00_项目源代码/Java-后端/deepseekAPI/: pom.xml
docs/00_项目源代码/鸿蒙-南向/: README.md
docs/00_项目源代码/鸿蒙-南向/device/: BUILD.gn  ac.c  ac.h  device_app.c  ems.c  ems.h  speaker.c  speaker.h
docs/00_项目源代码/鸿蒙-南向/device/include/: beep.h  common.h  i2c.h  key.h  mq_2.h  mqtt.h  mqtt1.h  oled.h  wifi.h
docs/00_项目源代码/鸿蒙-南向/device/src/: beep.c  i2c.c  key.c  mq_2.c  mqtt.c  mqtt1.c  oled.c  wifi.c
docs/01_需求分析/: 智慧生活——智能家居系统需求分析.doc  需求分析结构要求.txt
docs/02_设计文档/: 商城系统_数据库设计说明书.doc  智慧生活——智能家居系统设计文档.docx
docs/03_项目计划/: XXXX系统_项目计划模板.doc  智慧生活——智能家居系统用户手册.doc  智慧生活——智能家居系统项目计划.doc
docs/04_用户手册/: ppt1.pptx  ppt2.pptx  演示用ppt.txt
docs/06_会议纪要/: XXXX系统_会议记录_YYYYMMDD模板.doc  智慧生活——智能家居系统_会议记录_20250707.doc  智慧生活——智能家居系统_会议记录_20250709.doc
docs/07_实训报告/: 实训小结_37220222203811_熊文.doc  实训小结_包静萱.txt  实训小结_李学敏.txt  实训小结_熊文.txt  实训小结_阚婉芹.txt  实训小结_陈博煌.doc  实训小结_陈博煌.txt  实训小结——李学敏.txt
entry/src/main/: module.json5
entry/src/main/ets/model/: DeviceDataSource.ets  EmsData.ets  ResultData.ets
entry/src/main/ets/pages/: AIQaPage.ets  HomePage.ets  Index.ets  ProfilePage.ets  SearchDevicePage.ets  Test.ets
entry/src/main/ets/test/: DeviceCardTestPage.ets  MqttTestPage.ets
entry/src/main/ets/view/: DeviceCard.ets  UnboundDeviceCard.ets
(+19 files in other folders)
